# fast_daq

./: .gitmodules  CMakeLists.txt  Dockerfile  FastDaqConfig.cmake.in  README.md  entrypoint.sh
.github/workflows/: build.yaml
ATS_local/lib/x86_64-linux-gnu/: libATSApi.so.0.0
ATS_local/usr/include/: AlazarApi.h  AlazarCmd.h  AlazarDSP.h  AlazarError.h  AlazarRC.h
cmake/: ATS9462.cmake  FindATS9462.cmake
docker-compose/: README.md  authentications.json  docker-compose.yaml
examples/: ats_to_nothing.yaml  data_prod_to_dead_end.yaml  egg_example.yaml  new_ats.yaml
source/: CMakeLists.txt
source/applications/: CMakeLists.txt  README.md  fast_daq.cc  psyllid.cc
source/control/: CMakeLists.txt  README.md  butterfly_house.cc  butterfly_house.hh  daq_control.cc  daq_control.hh  monarch3_wrap.cc  monarch3_wrap.hh
source/daq/: ATS9462_digitizer.cc  ATS9462_digitizer.hh  ATS9462_digitizer_idler.cc  ATS9462_digitizer_idler.hh  CMakeLists.txt  README.md  ats_streaming_writer.cc  ats_streaming_writer.hh  data_producer.cc  data_producer.hh  dead_end.cc  dead_end.hh  egg_writer.cc  egg_writer.hh  frequency_transform.cc  frequency_transform.hh  inverse_frequency_transform.cc  inverse_frequency_transform.hh  power_averager.cc  power_averager.hh  real_time_data.cc  real_time_data.hh  spectrum_relay.cc  spectrum_relay.hh  streaming_frequency_writer.cc  streaming_frequency_writer.hh
source/data/: CMakeLists.txt  frequency_data.cc  frequency_data.hh  iq_time_data.cc  iq_time_data.hh  power_data.cc  power_data.hh  real_time_data.cc  real_time_data.hh  time_data.cc  time_data.hh
source/utility/: CMakeLists.txt  README.md  fast_daq_error.cc  fast_daq_error.hh  fast_daq_version.cc.in  fast_daq_version.hh  sandfly_error.cc  sandfly_error.hh  sandfly_version.cc.in  sandfly_version.hh
